[package]
name = "stratum"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "Jean Pierre Dudey <jeandudey@hotmail.com>"]
license = "CC0-1.0"
description = "Rust support for the Stratum protocol"

[lib]
path = "lib.rs"

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.hyper]
version = "0.10"
